src/views/BasketModalView/BasketModalView.module.css
.BasketModalView {
  display: flex;
  width: 90vw;
  max-width: 800px;
  height: 95vh;
}

.BasketModalView img {
  width: 150px;
  object-fit: cover;
}

.BasketModalView .Content {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.BasketModalView .ScrollableContent {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.BasketModalView .Header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  background-color: var(--color-fourth);
}

.BasketModalView .Title {
  font-weight: 600;
  font-size: 18px;
}

.BasketModalView .Buttons {
  display: flex;
  padding: 1rem;
}

.BasketModalView .Buttons {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  margin-top: auto;
}

.BasketModalView .Buttons button {
  flex: 1;
}

.BasketModalView .ContinueShoppingButton {
  border: 2px solid var(--color-secondary);
  background-color: var(--color-primary);
  color: var(--color-black);
}

.BasketModalView .CloseButton {
  background: transparent;
}

.BasketModalView .BasketInfo {
  padding-left: 20px;
  padding-right: 20px;
  text-align: start;
}

.BasketModalView .BasketInfo .Products {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 0.5rem;
}

.BasketModalView .EmptyBasketInfo {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 40px 0px;
  font-weight: 700;
  color: var(--color-sixth);
}

.BasketModalView .Delivery {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1.5rem;
}

.BasketModalView .DeliveryCities {
  grid-column: 1 / span 3;
}

.BasketModalView .Street {
  grid-column: 1 / span 2;
}

@media (max-width: 650px) {
  .BasketModalView {
    width: 100vw;
    height: 100vh;
  }

  .BasketModalView img {
    width: 0;
  }
}

@media (max-width: 475px) {
  .BasketModalView .Delivery {
    grid-template-columns: 1fr;
  }

  .BasketModalView .DeliveryCities {
    grid-column: 1;
  }

  .BasketModalView .Street {
    grid-column: 1;
  }
}

@media (max-width: 430px) {
  .BasketModalView .Buttons {
    flex-direction: column;
  }
}

